Use projects and releases
Resolves #2.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,3 @@
-# The tag for the Docker images. This is used for cache invalidation, so it's important that it is
-# unique per build.
 ARG TAG
 
 ################################################################################
@@ -18,22 +16,8 @@ RUN apt-get update && apt-get -y install ca-certificates
 ################################################################################
 FROM ${DOCKER_REPO}base:${TAG} as download-ucm
 
-ADD https://github.com/unisonweb/unison/releases/download/latest/ucm-linux.tar.gz /tmp/ucm-linux.tar.gz
+ADD https://github.com/unisonweb/unison/releases/latest/download/ucm-linux.tar.gz /tmp/ucm-linux.tar.gz
 RUN tar -x -z -f /tmp/ucm-linux.tar.gz -C /usr/local/bin ./ucm
-
-################################################################################
-# fetch-unison-application-hash
-#
-# Fetches the latest hash of the unison-application namespace and stores it in `/usr/share/unisonapp/hash.txt`.
-# This is used to invalidate the docker cache if the namespace hash changes.
-################################################################################
-FROM ${DOCKER_REPO}base:${TAG} as fetch-unison-application-hash
-RUN apt-get -y install curl jq
-ARG SHARE_USER
-ARG SHARE_NAMESPACE
-ARG TAG
-RUN mkdir -p "/usr/share/unisonapp"
-RUN TAG="${TAG}" curl -f -s "https://api.unison-lang.org/codebases/${SHARE_USER}/browse?relativeTo=${SHARE_NAMESPACE}" | jq -r .namespaceListingHash > "/usr/share/unisonapp/hash.txt"
 
 ################################################################################
 # compile-unison-application
@@ -46,12 +30,11 @@ COPY --from=download-ucm /usr/local/bin/ucm /usr/local/bin/ucm
 COPY pull-and-compile.md.tpl /tmp/
 ARG SHARE_USER
 ARG SHARE_NAMESPACE
+ARG SHARE_PROJECT
+ARG PROJECT_RELEASE
 ARG MAIN_FUNCTION
-RUN MAIN_FUNCTION="${MAIN_FUNCTION}" SHARE_USER="${SHARE_USER}" SHARE_NAMESPACE="${SHARE_NAMESPACE}" envsubst < /tmp/pull-and-compile.md.tpl > /tmp/pull-and-compile.md
+RUN SHARE_USER="${SHARE_USER}" SHARE_PROJECT="${SHARE_PROJECT}" PROJECT_RELEASE="${PROJECT_RELEASE}" MAIN_FUNCTION="${MAIN_FUNCTION}" envsubst < /tmp/pull-and-compile.md.tpl > /tmp/pull-and-compile.md
 RUN mkdir -p /usr/share/unisonapp
-# If the namespace hash updates this will invalidate the docker cache so the pull command pulls the latest code.
-# If it hasn't updated, we can just use the cached version.
-COPY --from=fetch-unison-application-hash /usr/share/unisonapp/hash.txt /usr/share/unisonapp/hash.txt
 RUN /usr/local/bin/ucm transcript /tmp/pull-and-compile.md
 
 ################################################################################
